--- a/SecurityPackage/securitypackagetest/SecurityPackageTest.csproj
+++ b/SecurityPackage/securitypackagetest/SecurityPackageTest.csproj
@@ -70,6 +70,10 @@
       <Name>SecurityLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="invers-sbox.txt" />
+    <Content Include="s-box.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
